refactor:  consolida fluxos http para upload de exames
